# 19.1_WEB_basics

./: README.md  index.html  main.py  pyproject.toml
